# amia_tp1

./: .gitignore  AMIA_2025_TP1.ipynb  AMIA_2025_TP1_Intro_Teorica.ipynb  AMIA_2025_TP1_Respuestas.ipynb  Ejemplos_Clasificacion_EfficientQDA.ipynb  Ejemplos_Clasificacion_FastQDA.ipynb  Ejemplos_Clasificacion_QDA.ipynb  Ejemplos_Clasificacion_TensorizedQDA copy.ipynb  Ejemplos_Clasificacion_TensorizedQDA.ipynb  Implementaciones_y_benchmarks.ipynb  README.md  RESUMEN_FINAL.md  Respuestas.ipynb  TP1_original.ipynb  clasificacion_wine_qda.ipynb  debug_faster_qda.py  debug_test.py  ejemplo_benchmark.py  implementations.py  implementations_final.py  implementations_fixed.py  main.py  pyproject.toml  requirements.txt  respuestas_teoricas.md  test_final.py  test_simple.py
base/: bayesian.py  cholesky.py  qda.py
ejemplos clasificacion/: Ejemplos_Clasificacion_EfficientQDA.ipynb  Ejemplos_Clasificacion_FastQDA.ipynb  Ejemplos_Clasificacion_QDA.ipynb  Ejemplos_Clasificacion_TensorizedQDA.ipynb
scikit-learn/: prueba_lda.ipynb  prueba_qda.ipynb
utils/: datasets.py
